# practical-ml-with-rust

./: .gitignore  readme.md
glm-regression/: Cargo.toml  readme.md
glm-regression/src/: datasets.rs  glms.rs  main.rs
gp-regression/: Cargo.toml  readme.md
gp-regression/src/: gaussian_process_reg.rs  main.rs
iris_classification_tch/: Cargo.toml  readme.md
iris_classification_tch/src/: linear_with_sgd.rs  simple_nn.rs
iris_xgboost/: Cargo.toml  readme.md
iris_xgboost/src/: main.rs
ndarray-koans/src/koans/01_constructors/: 00_from_vec.rs  01_macro_literal.rs  03_three_dimensional.rs  04_random.rs  05_random_take2.rs
ndarray-koans/src/koans/02_cluster_generation/: 00_origin.rs  01_as_a_function.rs  02_smoke_check.rs  03_translation.rs  04_views.rs  05_seed.rs  06_dataset.rs
ndarray-koans/src/koans/03_interlude/: 00_the_plan.rs
ndarray-koans/src/koans/04_initialisation/: 00_input.rs  01_array_base.rs
ndarray-koans/src/koans/05_assignment/: 00_distance.rs  01_generalised_distance.rs  02_closest.rs  (+1 more)
rust-tf-regression/: .gitignore  Cargo.toml
rust-tf-regression/src/: linear_regression.rs  main.rs
rustlearn-classification-tasks/: .gitignore  Cargo.toml  readme.md
rustlearn-classification-tasks/src/: datasets.rs  logistic_reg.rs  main.rs  trees.rs
rusty-machine-unsupervised/: Cargo.toml
rusty-machine-unsupervised/src/: datasets.rs  main.rs
rustymachine-knn/: Cargo.toml
rustymachine-knn/src/: main.rs
rustymachine-regression/: .gitignore  Cargo.toml  readme.md
rustymachine-regression/src/: datasets.rs  lin_reg.rs  main.rs
(+5 files in other folders)
